--- a/src/Mindbite.Mox.Core/Views/Shared/Mox/_Layout.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Mox/_Layout.cshtml
@@ -11,7 +11,7 @@
 @{
     var roles = await Html.Mox().GetRolesAsync();
     var selectedAppMenu = Config.Value.Apps
-        .Select(x => (app: x, menuItem: x.ResolveActiveMenu(this.ViewContext).Build(Url, roles).Flatten().LastOrDefault(y => y.MatchesView(this.ViewContext))))
+        .Select(x => (app: x, menuItem: x.GetCachedActiveMenu(ViewContext, Url, roles).Flatten().LastOrDefault(y => y.MatchesView(this.ViewContext))))
         .FirstOrDefault(x => x.menuItem != null);
     var currentSelectedMenu = selectedAppMenu.menuItem;
 }
@@ -33,6 +33,7 @@
     <meta name="viewport" content="width=device-width">
     @await Html.Mox().StaticFilesAsync(true)
     @await Html.Mox().AppStaticFilesAsync(true)
+    @await Html.Mox().InlineStaticFilesAsync(true)
     @RenderSection("styles", required: false)
 </head>
 <body>
@@ -73,9 +74,10 @@
             </div>
         </div>
     </div>
-
+    
     @await Html.Mox().StaticFilesAsync(false)
     @await Html.Mox().AppStaticFilesAsync(false)
+    @await Html.Mox().InlineStaticFilesAsync(false)
     @RenderSection("scripts", required: false)
     
     <script>Mox.UI.GlobalInstances.initDefault()</script>
