Fully generic directory listing

--- a/src/Mindbite.Mox.DirectoryListing/Views/Shared/DirectoryListing/CreateDirectory.cshtml
+++ b/src/Mindbite.Mox.DirectoryListing/Views/Shared/DirectoryListing/CreateDirectory.cshtml
@@ -11,10 +11,11 @@
     var parentDirectory = (Mindbite.Mox.DirectoryListing.Data.DocumentDirectory?)ViewData["ParentDirectory"];
     var dbContext = contextFetcher.FetchDbContext<Mindbite.Mox.DirectoryListing.Data.IDirectoryListingDbContext>();
 
-    var getDirectories = ViewContext.HttpContext.Items["GetDirectories"] as Func<Mindbite.Mox.DirectoryListing.Data.IDirectoryListingDbContext, IQueryable<Mindbite.Mox.DirectoryListing.Data.DocumentDirectory>>;
+    var getDirectories = ViewContext.HttpContext.Items[Mindbite.Mox.DirectoryListing.Constants.GetDirectoriesHttpContentItemKey] as Func<Mindbite.Mox.DirectoryListing.Data.IDirectoryListingDbContext, IQueryable<Mindbite.Mox.DirectoryListing.Data.DocumentDirectory>>;
     var allDirectories = await getDirectories(dbContext).ToListAsync();
 
-    var breadCrumbs = parentDirectory != null ? Mindbite.Mox.DirectoryListing.Utils.GetParents(allDirectories, parentDirectory) : Enumerable.Empty<Mindbite.Mox.DirectoryListing.Data.DocumentDirectory>();
+    var directoryType = (Type)ViewContext.HttpContext.Items[Mindbite.Mox.DirectoryListing.Constants.DirectoryTypeHttpContentItemKey];
+    var breadCrumbs = parentDirectory != null ? Mindbite.Mox.DirectoryListing.Utils.GetParents(directoryType, allDirectories, parentDirectory) : Enumerable.Empty<Mindbite.Mox.DirectoryListing.Data.DocumentDirectory>();
 
     var additionalNodes = (IEnumerable<Mindbite.Mox.UI.Menu.MenuItem>)ViewData["AdditionalBreadCrumbNodes"];
 
